--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.3",
-		"react-navigation": "^1.0.0-beta.11"
+		"lodash": "^4.17.4",
+		"react": "16.0.0",
+		"react-native": "0.50.3",
+		"react-navigation": "^1.0.0-beta.19"
 	},
 	"devDependencies": {
-		"babel-jest": "21.0.2",
+		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
-		"jest": "21.1.0",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"jest": "21.2.1",
+		"react-test-renderer": "16.0.0"
 	},
 	"jest": {
 		"preset": "react-native"
